fixing alignment problem on mainbar

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -43,6 +43,7 @@ a {
 }
 
 .menu-logo {
+	float: left;
 	width: 50px;
 	height: 50px;
 }
